fix layout issues

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100vh;
-  max-width: 900px;
+  max-width: 1000px;
   background-color: #fff;
   margin: 0 auto;
   font-family: "Poppins", sans-serif;
